--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drawer",
+  "name": "foxiums-drawer",
   "version": "1.0.0",
   "description": "a react.js drawer",
   "main": "index.js",
