--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "foxiums-drawer",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "a react.js drawer",
-  "main": "index.js",
+  "main": "./drawer.js",
   "scripts": {
+    "build": "babel src --out-dir ./"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,17 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/czuendorf/drawer/issues"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   },
   "homepage": "https://github.com/czuendorf/drawer#readme"
 }
